# assignment2-systems

./: pyproject.toml  writeup.md
cs336-basics/: pyproject.toml
cs336_systems/: COMMANDS.md  benchmarking.py  benchmarking_mixed_precision.py  flash_attn_pytorch.py  flash_attn_triton.py  flash_benchmark.py  nvtx_annotations.py  profile.py  utils.py  weighted_sum_tl.py  weighted_sum_tutorial.ipynb
cs336_systems/benchmark_results/: benchmark_writeup.md
cs336_systems/ddp/: bench_all_reduce.py  bench_naive_ddp.py  ddp_overlap_individual_parameters.py  naive_ddp.py  utils.py
cs336_systems/dpp/: bench_all_reduce.py  bench_naive_dpp.py  naive_dpp.py
cs336_systems/scripts/: activation_ckpt_experiment.py  autograd_experiment.py  flash_benchmark.py
tests/: adapters.py
