[project]
name = "cs336-systems"
version = "26.1.4"
description = "CS336 Assignment 2 - Systems"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "cs336-basics",
    "humanfriendly",
    "matplotlib",
    "numpy",
    "pytest>=8",
    "regex>=2026.3.32",
    "torch~=2.11.0",
    "tqdm>=4.67.1",
    "wandb>=0.19.7",
    "pandas>=2",
    "ty>=0.0.29",
    "ruff>=0.15.10",
]

[build-system]
requires = ["uv_build>=0.11.6,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "cs336_systems"
module-root = ""

[tool.uv]
package = true
python-preference = "managed"

[tool.uv.sources]
cs336-basics = { path = "./cs336-basics", editable = true } # Change this path to your assignment1-basics repo you want to use your own implementation!



[tool.pytest.ini_options]
log_cli = true
log_cli_level = "WARNING"
addopts = "-s"
filterwarnings = [
    "ignore::DeprecationWarning:torch.jit.*",
    "ignore:Attempting to run cuBLAS:UserWarning",
    "ignore:TensorFloat32:UserWarning",
]

[tool.ruff]
line-length = 180

[tool.ruff.lint.extend-per-file-ignores]
# Also ignore `E402` in all `__init__.py` files.
"__init__.py" = ["E402", "F401", "F403", "E501"]

[tool.ruff.lint]
extend-select = ["UP"]
ignore = ["F722"]
